feat: implement expand param in boat